--- a/website/workshop-distribution.yaml
+++ b/website/workshop-distribution.yaml
@@ -81,7 +81,10 @@ Resources:
               CanonicalUser:
                 Fn::GetAtt: [CloudFrontOriginIdentity, S3CanonicalUserId]
             Action: "s3:GetObject"
-            Resource: "arn:aws:s3:::testwork5-websitebucket-otgqai9c0vd4/*"
+            Resource: 
+            !Join [
+              "",
+            [Fn::ImportValue !Sub "${WorkshopName}-WebARN", /*"]]
 
   WebsiteCloudfront:
     Type: AWS::CloudFront::Distribution
@@ -94,7 +97,7 @@ Resources:
           - DomainName:
               !Join [
                 "",
-                ["testwork5-websitebucket-otgqai9c0vd4", ".s3.amazonaws.com"],
+                [Fn::ImportValue !Sub "${WorkshopName}-WebBucket", ".s3.amazonaws.com"],
               ]
             Id: webpage
             S3OriginConfig:
