--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,12 +13,14 @@ phases:
       
 artifacts:
   files:
-    - 'public/**/*'
-  name: website-$(date +%Y-%m-%d)
-
+    - 'public/**.*'
   secondary-artifacts:
     codeartifact:
       files:
         - 'code/**.*'
       discard-paths: yes
-
+  secondary-artifacts:
+    BuildArtifact:
+      files:
+        - 'public/**.*'
+      name: website-$(date +%Y-%m-%d)
