--- a/website/pipeline-template.yaml
+++ b/website/pipeline-template.yaml
@@ -19,7 +19,7 @@ Outputs:
   WebsiteURL:
     Value: !GetAtt WebsiteBucket.WebsiteURL
     Export:
-      Name: !Sub "${AWS:StackName}-WebURL"
+      Name: !Sub "${AWS::StackName}-WebURL"
 
   WebsiteARN:
     Value: !GetAtt WebsiteBucket.Arn
@@ -80,20 +80,20 @@ Resources:
               InputArtifacts:
                 - Name: SourceArtifact
               OutputArtifacts:
-                - Name: BuildArtifact
+                - Name: WebsiteArtifact
                 - Name: CodeArtifact
               Configuration:
                 ProjectName: !Ref CodeBuildProject
         - Name: Deploy
           Actions:
-            - Name: deploy-to-s3
+            - Name: deploy-website-to-s3
               ActionTypeId:
                 Category: Deploy
                 Owner: AWS
                 Provider: S3
                 Version: 1
               InputArtifacts:
-                - Name: BuildArtifact
+                - Name: WebsiteArtifact
               Configuration:
                 Extract: true
                 BucketName: !Ref WebsiteBucket
@@ -111,17 +111,29 @@ Resources:
                 BucketName: !Ref CodeBucket
               RunOrder: 1
 
-            - Name: update-s3-public-acl
+            - Name: update-web-s3-public-acl
               ActionTypeId:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
                 Version: 1
               InputArtifacts:
-                - Name: BuildArtifact
+                - Name: WebsiteArtifact
               Configuration:
-                FunctionName: !GetAtt CodePipelineS3ObjectsPublicRead.Outputs.PublicReadAclFunctionName
+                FunctionName: !GetAtt CodePipelineWebsiteS3ObjectsPublicRead.Outputs.PublicReadAclFunctionName
               RunOrder: 2
+            - Name: update-code-s3-public-acl
+              ActionTypeId:
+                Category: Invoke
+                Owner: AWS
+                Provider: Lambda
+                Version: 1
+              InputArtifacts:
+                - Name: CodeArtifact
+              Configuration:
+                FunctionName: !GetAtt CodePipelineCodeS3ObjectsPublicRead.Outputs.PublicReadAclFunctionName
+              RunOrder: 2
+
 
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
@@ -137,7 +149,7 @@ Resources:
       Source:
         Type: CODEPIPELINE
 
-  CodePipelineS3ObjectsPublicRead:
+  CodePipelineWebsiteS3ObjectsPublicRead:
     Type: AWS::Serverless::Application
     Properties:
       Location:
@@ -145,6 +157,15 @@ Resources:
         SemanticVersion: 0.0.1
       Parameters:
         S3BucketParameter: !Ref WebsiteBucket
+
+  CodePipelineCodeS3ObjectsPublicRead:
+    Type: AWS::Serverless::Application
+    Properties:
+      Location:
+        ApplicationId: arn:aws:serverlessrepo:us-east-1:068896461592:applications/codepipeline-s3-objects-public-read
+        SemanticVersion: 0.0.1
+      Parameters:
+        S3BucketParameter: !Ref CodeBucket
 
   CodePipelineServiceRole:
     Type: AWS::IAM::Role
