--- a/website/workshop-cloudfront.yaml
+++ b/website/workshop-cloudfront.yaml
@@ -11,80 +11,13 @@ Parameters:
     Type: String
     Default: aws.seibtribe.com
 
+Outputs:
+ 
 Resources:
-  ACMValidateFunction:
-    Type: AWS::Lambda::Function
-    Properties:
-      Code:
-        S3Bucket:
-          !Select [
-            3,
-            !Split ["/", "Fn::ImportValue": !Sub "${ParentStack}-CodeURL"],
-          ]
-        S3Key: ACMValidateFunction.zip
-      FunctionName: !Sub "${ParentStack}-ACMValidateFunction"
-      Handler: acm_autovalidate.handler
-      Role:
-        Fn::GetAtt:
-          - ACMValidateRole
-          - Arn
-      Runtime: python3.6
-
-  ACMValidateRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          - Action:
-              - sts:AssumeRole
-            Effect: Allow
-            Principal:
-              Service:
-                - lambda.amazonaws.com
-        Version: "2012-10-17"
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-      Policies:
-        - PolicyDocument:
-            Statement:
-              - Action:
-                  - acm:DescribeCertificate
-                  - acm:ListCertificates
-                  - acm:RequestCertificate
-                  - acm:DeleteCertificate
-                  - route53:ListHostedZonesByName
-                  - route53:ChangeResourceRecordSets
-                Effect: Allow
-                Resource: "*"
-            Version: "2012-10-17"
-          PolicyName: !Sub "${ParentStack}-ACMandRoute53Access"
-
-  ACMCertificate:
-    Type: Custom::ACMAutoValidate
-    Properties:
-      ServiceToken:
-        Fn::GetAtt:
-          - ACMValidateFunction
-          - Arn
-      zoneid: !Ref WorkshopDNSZone
-      domainname: !Join [".", ["*", Ref: WorkshopName, Ref: ParentZone]]
-      additionalnames:
-        - !Join [".", [Ref: WorkshopName, Ref: ParentZone]]
-
-  WorkshopDNSZone:
-    Type: AWS::Route53::HostedZone
-    Properties:
-      HostedZoneConfig:
-        Comment: !Join ["", ["Hosted zone for ", !Ref "WorkshopName"]]
-      Name: !Join [".", [Ref: WorkshopName, Ref: ParentZone]]
-      HostedZoneTags:
-        - Key: Workshop
-          Value: !Ref WorkshopName
-
-  CDNDNS:
+ CDNDNS:
     Type: AWS::Route53::RecordSet
     Properties:
-      Name: !Join ["", [cdn, ".", Ref: WorkshopName, ".", Ref: ParentZone, "."]]
+      Name: !Join ["", [www, ".", Ref: WorkshopName, ".", Ref: ParentZone, "."]]
       HostedZoneName: !Join ["", [Ref: WorkshopName, ".", Ref: ParentZone, "."]]
       Type: A
       AliasTarget:
@@ -101,11 +34,11 @@ Resources:
         - Name: !Join ["", [Ref: WorkshopName, ".", Ref: ParentZone, "."]]
           Type: A
           AliasTarget:
-            HostedZoneId: !Ref WorkshopDNSZone
+            HostedZoneId: "Fn::ImportValue": !Sub "${ParentStack}-ZoneId"
             DNSName:
               !Join [
                 "",
-                [cdn, ".", Ref: WorkshopName, ".", Ref: ParentZone, "."],
+                [www, ".", Ref: WorkshopName, ".", Ref: ParentZone, "."],
               ]
 
   CloudFrontOriginIdentity:
@@ -113,12 +46,6 @@ Resources:
     Properties:
       CloudFrontOriginAccessIdentityConfig:
         Comment: !Join ["", ["origin identity for", Ref: WorkshopName]]
-
-  WebsiteBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      WebsiteConfiguration:
-        IndexDocument: index.html
 
   WebsitePolicy:
     Type: AWS::S3::BucketPolicy
@@ -140,9 +67,8 @@ Resources:
               ]
 
   WebsiteCloudfront:
+    DependsOn: ACMCertificate
     Type: AWS::CloudFront::Distribution
-    DependsOn:
-      - WebsiteBucket
     Properties:
       DistributionConfig:
         Comment: Cloudfront Distribution pointing to S3 bucket
@@ -162,7 +88,7 @@ Resources:
         HttpVersion: "http2"
         DefaultRootObject: index.html
         Aliases:
-          - !Join [".", [cdn, Ref: WorkshopName, Ref: ParentZone]]
+          - !Join [".", [www, Ref: WorkshopName, Ref: ParentZone]]
           - !Join [".", [Ref: WorkshopName, Ref: ParentZone]]
         DefaultCacheBehavior:
           AllowedMethods:
@@ -178,5 +104,5 @@ Resources:
           ViewerProtocolPolicy: redirect-to-https
         PriceClass: PriceClass_100
         ViewerCertificate:
-          AcmCertificateArn: !GetAtt ACMCertificate.Arn
+          AcmCertificateArn: "Fn::ImportValue": !Sub "${ParentStack}-ACMArn"
           SslSupportMethod: sni-only
