--- a/website/pipeline-template.yaml
+++ b/website/pipeline-template.yaml
@@ -2,6 +2,13 @@ AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
 Parameters:
+  WorkshopName:
+    Type: String
+
+  ParentZone:
+    Type: String
+    Default: awsworkshop.io
+
   GitHubUsername:
     Type: String
 
@@ -36,7 +43,40 @@ Outputs:
     Export:
       Name: !Sub "${AWS::StackName}-CodeURL"
 
+  WorkshopDNSZoneId:
+    Value: !Ref WorkshopDNSZone
+    Export:
+      Name: !Sub "${AWS::StackName}-ZoneId"
+
+  WorkshopNameServers:
+    Value:
+      !Join [
+        "",
+        [
+          !Ref WorkshopName,
+          ".",
+          !Ref ParentZone,
+          " Nameservers: ",
+          !Select [0, !GetAtt WorkshopDNSZone.NameServers],
+          ", ",
+          !Select [1, !GetAtt WorkshopDNSZone.NameServers],
+          ", ",
+          !Select [2, !GetAtt WorkshopDNSZone.NameServers],
+          ", ",
+          !Select [3, !GetAtt WorkshopDNSZone.NameServers],
+        ],
+      ]
+    Export:
+      Name: !Sub "${AWS::StackName}-NSRecord"
+
+  ACMCertificateARN:
+    Description: ACM Certificate ARN
+    Value: !GetAtt ACMCertificate.Arn
+    Export:
+      Name: !Sub "${AWS::StackName}-ACMArn"
+
 Resources:
+  # Create Three S3 Buckets for the Website, Code to be used by Workshop participants, and the Code Pipeline Artifacts
   WebsiteBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -254,3 +294,75 @@ Resources:
                 Action:
                   - "s3:PutObject"
                 Resource: "*"
+
+  ## Create the Custom Resource Lambda that requests Amazon Certificate Manager Cert for your workshop and crease DNS Validation Record in your Zone
+
+  ACMValidateFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Code:
+        S3Bucket: seibeast
+        S3Key: ACMValidateFunction.zip
+      FunctionName: !Sub "${WorkshopName}-ACMValidateFunction"
+      Handler: acm_autovalidate.handler
+      Role:
+        Fn::GetAtt:
+          - ACMValidateRole
+          - Arn
+      Runtime: python3.6
+
+  ACMValidateRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+          - Action:
+              - sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+        Version: "2012-10-17"
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Policies:
+        - PolicyDocument:
+            Statement:
+              - Action:
+                  - acm:DescribeCertificate
+                  - acm:ListCertificates
+                  - acm:RequestCertificate
+                  - acm:DeleteCertificate
+                  - route53:ListHostedZonesByName
+                  - route53:ChangeResourceRecordSets
+                Effect: Allow
+                Resource: "*"
+            Version: "2012-10-17"
+          PolicyName: !Sub "${WorkshopName}-ACMandRoute53Access"
+
+  # Create the DNS Zone
+
+  WorkshopDNSZone:
+    Type: AWS::Route53::HostedZone
+    Properties:
+      HostedZoneConfig:
+        Comment: !Join ["", ["Hosted zone for ", !Ref "WorkshopName"]]
+      Name: !Join [".", [Ref: WorkshopName, Ref: ParentZone]]
+      HostedZoneTags:
+        - Key: Workshop
+          Value: !Ref WorkshopName
+
+  # Create the ACM Cert for www.workshop.parentzone and workshop.parentzone
+
+  ACMCertificate:
+    DependsOn: WorkshopDNSZone
+    Type: Custom::ACMAutoValidate
+    Properties:
+      ServiceToken:
+        Fn::GetAtt:
+          - ACMValidateFunction
+          - Arn
+      zoneid: !Ref WorkshopDNSZone
+      domainname: !Join [".", ["www", Ref: WorkshopName, Ref: ParentZone]]
+      additionalnames:
+        - !Join [".", [Ref: WorkshopName, Ref: ParentZone]]
